Fix horizontal scroll on spread view

--- a/viewer/latexworkshop.css
+++ b/viewer/latexworkshop.css
@@ -175,3 +175,13 @@ html[dir='rtl'] .findbar {
 :root {
     --scale-select-width: 120px !important;
 }
+
+.spread {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+}
+
+.spread .page {
+    margin-left: 1px !important;
+    margin-right: 0 !important;
+}
